<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".User.MainActivity">


    <ImageView
        android:id="@+id/fuelyImage"
        android:layout_width="240dp"
        android:layout_height="260dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/filling_station_image"
        android:padding="12dp"
        android:src="@drawable/filling" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newUser"
        android:outlineAmbientShadowColor="@color/primaryBlue"
        app:boxBackgroundColor="@color/placeholderColor"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:paddingBottom="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/passwordInput"
        android:layout_below="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            android:outlineAmbientShadowColor="@color/primaryBlue"
            app:boxBackgroundColor="@color/placeholderColor"
            app:boxBackgroundMode="outline"
            android:layout_weight="90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:background="@color/design_default_color_on_primary"
            android:layout_weight="5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/show_pass_24" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:rippleColor="@color/ripple" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/newUser"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fuelyImage"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        android:text="@string/new_user_click_here"
        android:textAlignment="center"
        android:textColor="@color/linkBlue"
        android:textStyle="italic" />


</RelativeLayout>